--- a/client/src/pages/login/login.css
+++ b/client/src/pages/login/login.css
@@ -6,18 +6,20 @@
     justify-content: center;
     background: linear-gradient(rgba(255, 255, 255, 0.5),
             rgba(255, 255, 255, 0.5)),
-        url("https://images.pexels.com/photos/768473/pexels-photo-768473.jpeg?auto=compress&cs=tinysrgb&dpr=2&w=500");
+        url("https://images.pexels.com/photos/1083633/pexels-photo-1083633.jpeg?auto=compress&cs=tinysrgb&w=600");
     background-size: cover;
 }
 
 .loginTitle {
-    font-size: 50px;
+    font-size: 55px;
 }
 
 .loginForm {
     margin-top: 20px;
     display: flex;
     flex-direction: column;
+    width:250px;
+    /* border:5px soltd red; */
 }
 
 .loginForm>Label {
@@ -33,7 +35,7 @@
 .loginButton {
     margin-top: 20px;
     cursor: pointer;
-    background-color: lightcoral;
+    background-color: black;
     border: none;
     border-radius: 10px;
     color: white;
