--- a/client/src/pages/register/register.css
+++ b/client/src/pages/register/register.css
@@ -6,7 +6,7 @@
     justify-content: center;
     background: linear-gradient(rgba(255, 255, 255, 0.5),
             rgba(255, 255, 255, 0.5)),
-        url("https://images.pexels.com/photos/317355/pexels-photo-317355.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940");
+        url("https://images.pexels.com/photos/733852/pexels-photo-733852.jpeg?auto=compress&cs=tinysrgb&w=600");
     background-size: cover;
 }
 
@@ -18,6 +18,7 @@
     margin-top: 20px;
     display: flex;
     flex-direction: column;
+    width:250px;
 }
 
 .registerForm>Label {
@@ -42,7 +43,7 @@
 .registerLoginButton{
     position: absolute;
     top: 60px;right: 20px;
-    background-color: lightcoral;
+    background-color: black;
     cursor: pointer;
     border: none;
     color: white;
